<resources>
    <string name="app_name">Forecast Weather</string>
    <string name="action_settings">Settings</string>
    <string name="content_description_weather_icon">weather icon</string>
    <string name="load_data_from_server">Loading…</string>
    <string name="heve_not_internet_connection">Have not internet connection</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_title_auto_sync">Auto sync</string>
    <string name="pref_description_auto_sync">Enable auto sync</string>


    <string name="pref_title_city">City</string>
    <string name="city_list_key">city_list</string>
    <string name="default_city">RU/Moscow</string>
    <string name="contentDescriptionNothing">nothing</string>
    <string name="moon">moon</string>
    <string name="sun">sun</string>

    <string-array name="pref_city_list_titles">
        <item>Mossscow</item>
        <item>St Peeetersburg</item>
    </string-array>
    <string-array name="pref_city_list_values">
        <item>RU/Moscow</item>
        <item>RU/Saint_Petersburg</item>
    </string-array>
    <string name="appwidget_text">HELLO</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="wc_use_background">Use background</string>
    <string name="wc_label_cities">City</string>
    <string name="text_color">Text color</string>
    <string name="white">white</string>
    <string name="black">black</string>
    <string name="temp_text_color">#FFFFFF</string>
    <string name="weather_icon_content_description">weather icon</string>
</resources>
